[update] タイトルを更新

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "屋久杉ブックマーク",
+  "name": "屋久杉ブックマーク",
   "icons": [
     {
       "src": "yakusugi_logo512.png",
